--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+ <link rel = "stylesheet" type = "style/css" href = "styles.css">
+ <title>
+   Xavier's Page
+ </title>
+ </head>
+  <body>
 
+  </body>
+</html>
